@@ -1,0 +1,1 @@
+swdesc_files --version test abc version_alnum2_fail.desc
