@@ -1,0 +1,1 @@
+swdesc_files --version test 1.2-123abc version_alnum_fail.desc
