@@ -1,0 +1,1 @@
+swdesc_files --version test\ space 1 version_component_space_fail.desc
