@@ -1,0 +1,1 @@
+swdesc_files --version test 1.2-@bc version_non_alnum_fail.desc
